# NetMind-XYZ-A2A-MCP

./: Dockerfile  README.md  main.py  mcp_server.py  pyproject.toml  requirements.txt  run.sh  setup.py
.env/: prod.env  test.env
core/: __init__.py  env_helper.py  models.py
core/a2a/: client.py  server.py
core/libs/: rpc.py
core/server/: __init__.py  xyz_platform.py
scripts/: test_mcp.ipynb
src/: model_price.py  stream_decoder.py
src/utils/: __init__.py  logging_util.py
tester/: agent.py  mcp-tools.py  memory.py  tools.py
yaml/: NetMind-XYZ-A2A-MCP.yaml  NetMind-XYZ-Society-MCP.yaml
